<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/black"
    tools:context=".EntryActivity"
    android:baselineAligned="false" >
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical" >
        <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="17"
	        android:contentDescription="@string/start_image_content_desc"
	        android:src="@drawable/start_image" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textColor="@color/dark_green"
            android:textStyle="italic"
            android:text="@string/copyright" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="5dp"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/light_green"
            android:gravity="center|left"
            android:text="@string/select_difficulty_title" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical" >
            <RadioButton
                android:id="@+id/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_green"
                android:text="@string/easy_option"
                android:checked="true"
                android:onClick="clickEasy" />
            <RadioButton
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_green"
                android:text="@string/medium_option"
                android:onClick="clickMedium" />
            <RadioButton
                android:id="@+id/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_green"
                android:text="@string/hard_option"
                android:onClick="clickHard" />
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/play_button"
            android:onClick="showBoard" />
    </LinearLayout>
    
</LinearLayout>